# ffmpeg-study-

./: CMakeLists.txt  main  main.cpp  readme.md
cmake/module/: FindWayland.cmake
lib/ffmpeg/: CMakeLists.txt  utils.h
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c  glad.h
src/: load_frame.cpp  load_frame.hpp  main  main.cpp  render_color.cpp  render_color.hpp  video_reader.cpp  video_reader.hpp
src/gui/: Window.cpp  Window.hpp
src/gui/gl/: Shader.cpp  Shader.hpp
tests/resources/gl/shaders/: fragment.fs  test_fileread.cpp  vertex.vs
tests/resources/gl/shaders/output/: test_fileread
